--- a/newindex2.html
+++ b/newindex2.html
@@ -15,7 +15,7 @@
             <div class="envelope">
                 <div class="card">
                     <div class="text">
-                        Happy <br> Valentines's <br> Day Babyyy ^^
+                        Happy <br> Valentine's <br> Day Babyyy ^^
                     </div>
                     <div class="heart"></div>
                 </div>
